# risk_agent_sber

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
agents/: README.md  base_agent.py  langgraph.json  langsmith_studio.py  temp.py  temp2.py
agents/chains/: README.md  __init__.py  base.py  faq_chain.py  full_chain.py  manner_chain.py  only_memory_chain.py  only_memory_wo_extract_manner.py  only_search_chain.py  rag_chain.py
agents/edges/: README.md  __init__.py  conditions.py
agents/nodes/: README.md  __init__.py  base.py  critique.py  extract_conversation_style.py  extract_faq.py  finalize.py  first_step.py  get_memory_faq.py  get_memory_manner.py  question_decomposition.py  rag.py  reason.py  search.py  store_question.py  write.py  write_faq.py  write_manner_to_memory.py
agents/prompts/: README.md  __init__.py  base.py
agents/prompts/system/: agent_identity.j2  critique.j2  faq_extract.j2  finalize.j2  first_step.j2  first_step_short.j2  manner_extract.j2  manner_main.j2  question_decomposition.j2  reason.j2  reason_short.j2  write.j2
agents/state_management/: README.md  __init__.py  commands.py  critique_model.py  faq_model.py  faq_state.py  global_state.py  manner_model.py  manner_state.py  output_manner_model.py  question_decomposition.py  reasoning_state.py
agents/state_management/validation_models/: README.md  __init__.py  critique_model.py  extractors_outputs.py  faq_model.py  first_step_model.py  manner_model.py  question_decomposition_model.py
agents/tools/: README.md  base.py
config/: .env.example  README.md  __init__.py  load_env.py  logger_config.py  model_config.py
config/env/: dev.env
database/: README.md  __init__.py  memory_store.py
database/faiss_db/: index.faiss  index.pkl
models/: README.md  __init__.py  base.py  mistralai.py  nomicai.py
models/config/: README.md  __init__.py  base.py  models.py
models/config/env/: env.example
tests/agents/nodes/: test_extract_manner.py
utils/: README.md  actualize_rag_db.py  cache.py  logger.py  prompt_loader.py  similarity_of_topics.py
